added AuthorSpecificationProvider, TitleSpecificationProvider and IsbnSpecificationProvider